# pouche

./: .gitignore  Cargo.toml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  detekt.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/apognu/push/: Database.kt  MainActivity.kt  MessagingService.kt  Migrations.kt  Pouche.kt
android/app/src/main/java/com/github/apognu/push/model/: Message.kt  Subscription.kt
android/app/src/main/java/com/github/apognu/push/repository/: MessageRepository.kt  SubscriptionRepository.kt
android/app/src/main/java/com/github/apognu/push/ui/notifications/: MessagesAdapter.kt  MessagesFragment.kt  MessagesViewModel.kt
android/app/src/main/java/com/github/apognu/push/ui/settings/: SettingsFragment.kt
android/app/src/main/java/com/github/apognu/push/util/: Content.kt  Emojis.kt
android/app/src/main/res/drawable/: dot.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_messages.xml  fragment_settings.xml  notification_big.xml  row_message.xml
android/app/src/main/res/menu/: bottombar.xml  message_more.xml  messages_appbar.xml
android/app/src/main/res/navigation/: navigation.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/gradle/wrapper/: gradle-wrapper.properties
src/: auth.rs  main.rs  push.rs  webhook.rs
