[package]
name = "pouche"
version = "0.1.0"
edition = "2021"

[dependencies]
fcm = "0.9.1"
headers = "0.3.5"
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
rocket = { version = "0.5.0-rc.1" }
serde_json = "1.0.72"
thiserror = "1.0.30"
tokio = { version = "1.2", default-features = false }
