[package]
name = "pouche"
version = "0.1.0"
edition = "2021"

[dependencies]
fcm = { git = "https://github.com/rj76/fcm-rust" }
headers = "0.3.5"
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
rocket = { version = "0.5.0-rc.1" }
serde_json = "1.0.72"
thiserror = "1.0.30"
tokio = { version = "1.2", default-features = false }
